--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@vercel/blob": "^0.27.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "pdfkit": "^0.16.0",
+    "body-parser": "^2.2.0"
   }
 }
