--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   "description": "",
   "dependencies": {
     "@vercel/blob": "^0.27.1",
-    "body-parser": "^1.20.3",
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "pdfkit": "^0.16.0",
-    "body-parser": "^2.2.0"
+    "html-pdf": "^3.0.1",
+    "nodemon": "^3.1.9",
+    "pdfkit": "^0.16.0"
   }
 }
