--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "html-pdf": "^3.0.1",
-    "nodemon": "^3.1.9",
-    "pdfkit": "^0.16.0"
+    "nodemon": "^3.1.9"
   }
 }
