--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "html-pdf": "^3.0.1",
-    "nodemon": "^3.1.9"
+    "html-pdf-node": "^1.0.8",
+    "nodemon": "^3.1.9",
+    "pdfkit": "^0.16.0",
+    "puppeteer": "^24.6.0"
   }
 }
