--- a/package.json
+++ b/package.json
@@ -19,8 +19,6 @@
     "express": "^4.21.2",
     "html-pdf": "^3.0.1",
     "html-pdf-node": "^1.0.8",
-    "nodemon": "^3.1.9",
-    "pdfkit": "^0.16.0",
-    "puppeteer": "^24.6.0"
+    "nodemon": "^3.1.9"
   }
 }
