--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "html-pdf": "^3.0.1",
+    "phantomjs-prebuilt": "^2.1.16",
     "nodemon": "^3.1.9"
   }
 }
