--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "vercel-start": "node index.js"
+    "vercel-start": "node index.js",
+    "postinstall": "playwright install"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +18,8 @@
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "nodemon": "^3.1.9",
     "phantomjs-prebuilt": "^2.1.16",
-    "nodemon": "^3.1.9"
+    "playwright": "^1.52.0"
   }
 }
