--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "vercel-start": "node index.js",
-    "postinstall": "playwright install && playwright install-deps",
-    "vercel-build": "playwright install && playwright install-deps"
+    "postinstall": "playwright install chromium",
+    "vercel-build": "playwright install chromium"
   },
   "keywords": [],
   "author": "",
