--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "vercel-start": "node index.js",
-    "postinstall": "playwright install chromium",
-    "vercel-build": "playwright install chromium"
+    "vercel-start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -19,8 +17,7 @@
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "nodemon": "^3.1.9",
     "phantomjs-prebuilt": "^2.1.16",
-    "playwright": "^1.52.0"
+    "nodemon": "^3.1.9"
   }
 }
